include_directories(.)

add_executable(bubble_sort bubble_sort.c++ ../../BookNotes/CPointer/计算指针数组的大小以及sizeof对指针和数组的区别.c)
add_executable(insertion_sort insertion_sort.c++)
add_executable(merge_sort merge_sort.c++)
add_executable(quick_sort quick_sort.c++)
add_executable(selection_sort selection_sort.c++)